# ChangeLog for xfce-extra/xfce4-netspeed-plugin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-netspeed-plugin/ChangeLog,v 1.10 2012/12/30 08:37:19 ssuominen Exp $

  30 Dec 2012; Samuli Suominen <ssuominen@gentoo.org>
  -xfce4-netspeed-plugin-0.2.ebuild,
  -files/xfce4-netspeed-plugin-0.2-port-to-libxfce4ui.patch:
  old

*xfce4-netspeed-plugin-0.3 (30 Dec 2012)

  30 Dec 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-netspeed-plugin-0.3.ebuild:
  Version bump.

*xfce4-netspeed-plugin-0.2 (17 Dec 2012)

  17 Dec 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-netspeed-plugin-0.2.ebuild,
  +files/xfce4-netspeed-plugin-0.2-port-to-libxfce4ui.patch:
  Version bump. Patch to use libxfce4ui instead of the dead libxfcegui4.

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-netspeed-plugin-0.1.ebuild:
  EAPI5

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-netspeed-plugin-0.1.ebuild:
  EAPI5

  16 Nov 2012; Andreas Schuerch <nativemad@gentoo.org>
  xfce4-netspeed-plugin-0.1.ebuild:
  x86 stable, see bug 429484

  27 Oct 2012; <ago@gentoo.org> xfce4-netspeed-plugin-0.1.ebuild:
  Stable for amd64, wrt bug #429484

  05 May 2012; Michał Górny <mgorny@gentoo.org>
  xfce4-netspeed-plugin-0.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  09 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-netspeed-plugin-0.1.ebuild:
  Install to libdir instead of libexecdir.

*xfce4-netspeed-plugin-0.1 (25 Nov 2011)

  25 Nov 2011; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-netspeed-plugin-0.1.ebuild:
  Initial commit.
