@@ -4,17 +4,17 @@ Hash: SHA256
 DIST xfce4-netspeed-plugin-0.1.tar.gz 350182 SHA256 4a0465e2ac9a68945832b864d648c54afcf81629cd3a72231709b73ea2a788ef SHA512 40caba535a4d87923ca0035f52e552fb29386a50abe7c28920839c7ba6c0d66acec9bd7152663b20b84f4525a1bdef937c25a9d00aadf062a74ce02576e83ec8 WHIRLPOOL 4c30e1a9e1624a779b812edc18264b7295a50cc6b8c1f9605af85ac8a9cde303cbc9df5fea8b93cc7f77564df4ea407a2b171c1c8b91607316f6f81a1cd4147e
 DIST xfce4-netspeed-plugin-0.3.tar.gz 360880 SHA256 f51d68d7154717715d6ffae6e5deefb85ccec12c159d8c3092bbf7df568fbdcd SHA512 6768f6ed157061e1c4fa0a6955901bd9ff5f48e3a0eefa3f0ccf718e0a441d5592537434436eb239a52df4a53084dd893ace6cb1b7ba3c7bbc1b8cf0fa35cf61 WHIRLPOOL ef661202846961785d8558daa3edae56d622329e8c2d2b8d0864ca466646bc6d5c6bd9a3b4f4eeebdb6cc5af0eee3085480b5e1d6f4b8cb42b3b5a76c9cd7d9a
 EBUILD xfce4-netspeed-plugin-0.1.ebuild 872 SHA256 c5f8ddf619586aaf6358466909fb3a8a245d2b4e3b8150b7b22d1494779e0247 SHA512 9eae92f305374656dcbd931ffd1c74624d01ab6c11a6e2b666c1156f088fa76b544615d9eb876792e83777a6a3b3d8ec1f7c4347dd2955b34fd0d43300174da2 WHIRLPOOL 431490f42ed303c5d18cd283be28a98605ea81c24ee1c1687fabe3d3eb9acb0e5aed88cc6948b7c622bbc2ca0562592f2079c7d4094dce1b47203b1646417089
-EBUILD xfce4-netspeed-plugin-0.3.ebuild 912 SHA256 da511c3836f0ebbfe09b7afbc153442b1671dccec366097dbde2381699b8917c SHA512 a9ccbfa1b6ba41c9cd4f73b48bb64cf3b490f245969fbcc81d35ebd62f91375030d64a61359614266dba4456d991c8ea7ad8815b127f84b9f8ef1907a9a73171 WHIRLPOOL f0eaacfbcb8879add29f6c3a13df77a297aac234db832c059b0eb8b02c223e6ecb7adb4805ed3cd84cc81f15bb61c14f3789b825ccbd4b0d4c413885b97b7a0c
-MISC ChangeLog 1655 SHA256 014f2f3ff90d4d6f8c7a46ac868259206c552527608de522751785f3809e50f6 SHA512 8b9d797a05284f49d1cf51c3a30a4cc838ec0346c0529735ad351a7b68ad028c9895ad248f76beb1dc0e6ff2ab939abca123cd8f07dd85e92dfda612af4bf2bd WHIRLPOOL d75517cf8377380cfdbbd5a0717f2998a12e5c5132d9ecf7616d21eda78e49ef2c9093961d90a8bb65b9898936a43f967dd650896fdebf1581cb0a2f58c3ec8d
+EBUILD xfce4-netspeed-plugin-0.3.ebuild 910 SHA256 ad470ea5967bfabe6318efec3200e964e7a3aac0cfc913b6e5d08fce6a4965c6 SHA512 22be74bb42d820cf49fe7964011c78b7afadb5a62f03fc9bec1083c03c5ea43963c04f3e8b81c5fb1fa987543a20bdd9860b9f788dde5425bb5bdcac3dbb2cc5 WHIRLPOOL 203b370c124dad7ca0db0b138c3ceab1412ab3d0ab33ce1999b08264acef8d8816fb5caada903499ed508d46bdd0f023bd42c58d9f39340023fa23d84c3ed0d8
+MISC ChangeLog 1765 SHA256 ac22c4622652991e6309dd8f7eda6a7f9176fecd8e27237d1bb691e1b755fc15 SHA512 86492b7226af8f2bd421da64eb1554bd4ad288f96164834673e188c2d391c5fad8051c1c592d50a95799a0c250b56232e52d98cb573dc9dcd8b1e3d9f1034f7c WHIRLPOOL 10ef1a13e3b46fa01ec0448fafed859a25f95d126881b470769eee89f5c3d32a9892bb0578a356c45255de4f0a19f3c9f88de5df02e4c0d46ce930e544f527d0
 MISC metadata.xml 249 SHA256 72af602fe2cd8cb34dc307433124f8b81819bab4a1669445d5713a9b87c1d442 SHA512 45b6e5365d9584d21ac59f6c46762dfde0a3480cf35f1bb4438a94851493b70270750725862ecd5d2c816efbe3c9cee2a5d009dcdcca5f5a914e9d2b9079692e WHIRLPOOL a64a524534517bf2afb3d57a921c2039d1d5d6c52516437804a3779cd6c28baa6195d47f2f0106523598f0eff2b48296d1f989eec51cc4a07b7af32d90258af4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQ3/z/AAoJEEdUh39IaPFNDygH/0GXBC/r7iJnqmqKMVOrt/kK
-OKvxU2vuuCwZ0VA0u+qE4T+g1gQOQWBdX3Dv6oajUWxi8GhtgAPXtEaBYvtyA7Ov
-gPaaILiKylwJRLhE12MaUtyEq87/1VaH2k3sFOpWuiIyYMUnQ3B6T/UmTmki7yld
-lIoOCEPrQaOp7ML0QpmprKQZWL8eeDfbIRq0yYlcDSfFTVgzmL7rpSWs8A5EN6Ng
-vn/a8GgFKNKqG4FesKrAyHD4kxchgPpipSJXpBzJfcQ39Ve+iMdR3a2Sr6WMq/La
-TXUnHpgopH5xHOdxm/eAOcb9l8W/5TGoCDfJxocjZFqE/1mr4PMBSuL8CMoZTbg=
-=PNeM
+iQEcBAEBCAAGBQJRJLXYAAoJEEdUh39IaPFN+N0IAJXV3pbF7ybciJXIDdtqK8eX
+QgDAqeLriHt5CDrXKw4gop4mcKOcTrCWiXD4ovQILyuWmgGMu47MIOWUveGYKKGs
+dWkhLg0j5Vf1uMNTKrPl1/cXT3Vb4belktxTR1dj7RsH0FH5mju4twxW2l0BsLpl
+NGLE1LUr5qwkavQLwKACPElH1xbc04xCC8mXiajv/nrmv4q90MG5Sf5xoavXOwOY
+83h5pbd0sLAiehH73YeyHP09V15T6ZK40oDS5iA5gjnOuvxf6QdIwOfBMCKuDECR
+7fz6Hk0hzjVd/J2toWCsA+f6QXAhn5Td8+Ox9qwJbOiKT1Ap0wJhzih4GCMaA08=
+=59nr
 -----END PGP SIGNATURE-----
