@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-netspeed-plugin
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-netspeed-plugin/ChangeLog,v 1.10 2012/12/30 08:37:19 ssuominen Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-netspeed-plugin/ChangeLog,v 1.11 2013/02/20 11:39:37 ssuominen Exp $
+
+  20 Feb 2013; Samuli Suominen <ssuominen@gentoo.org>
+  xfce4-netspeed-plugin-0.3.ebuild:
+  amd64/x86 stable
 
   30 Dec 2012; Samuli Suominen <ssuominen@gentoo.org>
   -xfce4-netspeed-plugin-0.2.ebuild,
